sources/devops/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-construct
  namespace: construct
spec:
  selector:
    app: web-construct
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
