sources/devops/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-construct
  namespace: construct
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: construct.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-construct
                port:
                  number: 80
